# Miaudote

./: .gitignore  .gitlab-ci.yml  CONTRIBUTORS.md  README.md  TESTING.md  miaudote
app/: Dockerfile  README.md  buildozer.spec  docker-compose.yaml  hotreload.py  main.py  mainHotReload.py  mainLogin.py  microHotreload.py  microHotreload2.py  orchestrator.py  pyproject.toml  recipeBook.py  requirements.txt  user.json
app/config/: firebase.py  miaudote-b4e55-firebase-adminsdk-eucjs-145c67a2b8.json
app/libs/baseclass/: CadScreen.py  LoginScreen.py  MyScreen.py  RootScreen.py  SignUpScreen.py  SignUpScreen2a.py  SignUpScreen2b.py  SignUpScreen4.py  WelcomeScreen.py
app/libs/kvfiles/: LoginScreen.kv  MyScreen.kv  RootScreen.kv  ScreenManager.kv  SignUpScreen.kv  SignUpScreen2b.kv  SignUpScreen3.kv  SignUpScreen4.kv  WelcomeScreen.kv
app/mem/chat/: ChatManager.py
app/mem/filechooser/: FMClient.py  FileManager.py
app/mem/login/: LoginManager.py
app/mem/pet/: PARManager.py  PetProfileManager.py  PetRProfileManager.py
app/mem/petSignUp/: petSignUpManager.py
app/mem/petsearch/: SearchController.py
app/mem/root/: RootManager.py
app/mem/screenmanager/: MainScreenManager.kv  MainScreenManager.py  MainScreenManager_old.py  screens.py
app/mem/signUp/: signUpManager.py  signUpManager_old.py  singUpManager.py
app/mem/user/: ARManager.py  FavoriteManager.py  PRManager.py  PRPManager.py  ProtectorPetsManager.py
app/mem/welcome/: WelcomeManager.py
app/mlo/adoption/: ARModel.py  AdoptionService.py
app/mlo/auth/: Address.py  HomeCharacteristics.py  Preferences.py  UserLoginData.py  authService.py  basicUserdata.py  dataModel.py  dataModelService.py  firebaseAuth.py
app/mlo/chat/: ChatMenssage.py  ChatService.py
app/mlo/database/: AdoptionDB.py  ChatDB.py  PetDB.py  UserDB.py  firebaseAdoptionDB.py  firebaseChatDB.py  firebasePetDB.py  firebaseUserDB.py
app/mlo/petrecommendation/: RecommendedPets.py
app/mlo/pets/: PetDataModel.py  (+3 more)
app/mui/: ColorTheme.py
app/services/: firebase.py  firebaseAuth.py
(+115 files in other folders)
