[tool.poetry]
name = "miaudote"
version = "0.1.0"
description = "Plataforma para adoção de pets entre adotantes e protetores de animais."
authors = [
            "Cristiano Sampaio <cristiano.sampaio@conpec.com.br>",
            "George Gigilas Junior <g216741@dac.unicamp.br>",
            "Jhonatan Cléto <j256444@dac.unicamp.br>",
            "Mylena Roberta dos Santos <my.roberta.9@gmail.com>"
          ]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/mc426-2s2021/mc426-engenharia-de-software"
keywords = ["Python", "Kivy", "Material Design", "Pets", "Adoção"]

[tool.poetry.dependencies]
python = "^3.7"
Kivy = "^2.0.0"
kivymd = {url = "https://github.com/kivymd/KivyMD/archive/master.zip"}
watchdog = "^2.1.5"
kaki = "^0.1.4"
Pyrebase4 = "^4.5.0"
firebase-admin = "^5.0.3"
pydantic = "^1.8.2"
email-validator = "^1.1.3"
pytest = "^6.2.5"
Unidecode = "^1.3.2"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
